core/src/main/java/nl/inl/blacklab/queryParser/corpusql/CorpusQueryLanguageParser.java
/* CorpusQueryLanguageParser.java */
/* Generated By:JavaCC: Do not edit this line. CorpusQueryLanguageParser.java */
package nl.inl.blacklab.queryParser.corpusql;

import java.util.HashMap;
import java.util.Map;

import nl.inl.blacklab.search.indexmetadata.IndexMetadata;
import nl.inl.blacklab.search.lucene.BLSpanQuery;
import nl.inl.blacklab.search.lucene.SpanQueryPositionFilter.Operation;
import nl.inl.blacklab.search.matchfilter.MatchFilter;
import nl.inl.blacklab.search.matchfilter.MatchFilterAnd;
import nl.inl.blacklab.search.matchfilter.MatchFilterEquals;
import nl.inl.blacklab.search.matchfilter.MatchFilterImplication;
import nl.inl.blacklab.search.matchfilter.MatchFilterNot;
import nl.inl.blacklab.search.matchfilter.MatchFilterOr;
import nl.inl.blacklab.search.matchfilter.MatchFilterString;
import nl.inl.blacklab.search.matchfilter.MatchFilterTokenProperty;
import nl.inl.blacklab.search.textpattern.TextPattern;
import nl.inl.blacklab.search.textpattern.TextPatternAnd;
import nl.inl.blacklab.search.textpattern.TextPatternAnyToken;
import nl.inl.blacklab.search.textpattern.TextPatternCaptureGroup;
import nl.inl.blacklab.search.textpattern.TextPatternConstrained;
import nl.inl.blacklab.search.textpattern.TextPatternEdge;
import nl.inl.blacklab.search.textpattern.TextPatternNot;
import nl.inl.blacklab.search.textpattern.TextPatternOr;
import nl.inl.blacklab.search.textpattern.TextPatternPositionFilter;
import nl.inl.blacklab.search.textpattern.TextPatternProperty;
import nl.inl.blacklab.search.textpattern.TextPatternRegex;
import nl.inl.blacklab.search.textpattern.TextPatternRepetition;
import nl.inl.blacklab.search.textpattern.TextPatternSequence;
import nl.inl.blacklab.search.textpattern.TextPatternTags;

@SuppressWarnings("all")

public class CorpusQueryLanguageParser implements CorpusQueryLanguageParserConstants {

    public static void main(String[] args) throws nl.inl.blacklab.queryParser.corpusql.ParseException
    {
  CorpusQueryLanguageParser parser = new CorpusQueryLanguageParser(new java.io.StringReader(args[0]));
  parser.query();
    }

    public static TextPattern parse(String query) throws nl.inl.blacklab.queryParser.corpusql.ParseException
    {
        CorpusQueryLanguageParser parser = new CorpusQueryLanguageParser(new java.io.StringReader(query));
        return parser.query();
    }

    private int num(Token t)
    {
     return Integer.parseInt(t.toString());
    }

    private String chopEnds(String input)
    {
     if (input.length() >= 2)
      return input.substring(1, input.length() - 1);
     throw new RuntimeException();
    }

    private String getStringBetweenQuotes(String input) throws SingleQuotesException
    {
        if (!allowSingleQuotes && input.charAt(0) == '\'')
            throw new SingleQuotesException();
        return chopEnds(input);
    }

    private TextPattern simplePattern(String str)
    {
        if (str.length() > 0) {
            if (str.charAt(0) != '^')
                str = "^" + str;
            if (str.charAt(str.length() - 1) != '$')
                str += "$";
        }

        // Treat everything like regex now; will be simplified later if possible
        return new TextPatternRegex(str);
    }

    /** Allow strings to be quoted using single quotes? */
    private boolean allowSingleQuotes = true;

    /** Allow strings to be quoted using single quotes? [default: yes] */
    public void setAllowSingleQuotes(boolean b) {
        allowSingleQuotes = b;
    }

    /** Allow strings to be quoted using single quotes? */
    public boolean getAllowSingleQuotes() {
        return allowSingleQuotes;
    }

    private String defaultProperty = "word"; //ComplexFieldUtil.DEFAULT_MAIN_PROP_NAME;

    public void setDefaultProperty(IndexMetadata indexMetadata, String fieldName) {
        defaultProperty = indexMetadata.getComplexFieldDesc(fieldName).getMainProperty().name();
    }

    public void setDefaultProperty(String property) {
        defaultProperty = property;
    }

    public String getDefaultProperty() {
        return defaultProperty;
    }

    private TextPattern propertyClause(String prop, TextPattern value) {
        // Main property has a name. Use that.
        if (prop == null || prop.length() == 0)
            prop = defaultProperty;
        return new TextPatternProperty(prop, value);
    }

// --- Grammar rules start here --- 

/* a query */
  final public TextPattern query() throws ParseException {TextPattern a = null;
    a = constrainedQuery();
    jj_consume_token(0);
{if ("" != null) return a;}
    throw new Error("Missing return statement in function");
  }

  final public TextPattern constrainedQuery() throws ParseException {TextPattern a = null;
 MatchFilter b = null;
    a = complexQuery();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 14:{
      jj_consume_token(14);
      b = constraint();
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      ;
    }
if (b == null)
            {if ("" != null) return a;}
        {if ("" != null) return new TextPatternConstrained(a, b);}
    throw new Error("Missing return statement in function");
  }

  final public MatchFilter constraint() throws ParseException {MatchFilter a = null, c = null;
    Token b = null;
    a = simpleConstraint();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 30:
    case 31:
    case 32:{
      b = booleanOperator();
      c = constraint();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      ;
    }
if (b == null)
   {if ("" != null) return a;}
        if (b.toString().equals("->"))
            {if ("" != null) return new MatchFilterImplication(a, c);}
  if (b.toString().equals("&"))
   {if ("" != null) return new MatchFilterAnd(a, c);}
  {if ("" != null) return new MatchFilterOr(a, c);}
    throw new Error("Missing return statement in function");
  }

  final public MatchFilter simpleConstraint() throws ParseException {MatchFilter v = null, w = null;
    Token b = null;
    v = constraintValue();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 15:
    case 16:{
      b = equalityOperator();
      w = constraintValue();
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      ;
    }
if (b == null)
   {if ("" != null) return v;}
        if (b.toString().equals("="))
            {if ("" != null) return new MatchFilterEquals(v, w, false, false);}
  if (b.toString().equals("!="))
   {if ("" != null) return new MatchFilterNot(new MatchFilterEquals(v, w, false, false));}
    throw new Error("Missing return statement in function");
  }

  final public Token equalityOperator() throws ParseException {Token t = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 15:{
      t = jj_consume_token(15);
      break;
      }
    case 16:{
      t = jj_consume_token(16);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return t;}
    throw new Error("Missing return statement in function");
  }

  final public MatchFilter constraintValue() throws ParseException {MatchFilter v = null;
 String q = null;
 Token s = null;
 String l = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case QUOTED_STRING:
    case SINGLE_QUOTED_STRING:{
      q = quotedString();
{if ("" != null) return new MatchFilterString(q);}
      break;
      }
    case 17:{
      jj_consume_token(17);
      v = constraint();
      jj_consume_token(18);
{if ("" != null) return v;}
      break;
      }
    case 19:{
      jj_consume_token(19);
      v = constraintValue();
{if ("" != null) return new MatchFilterNot(v);}
      break;
      }
    case NAME:
    case NUMBER:{
      l = captureLabel();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 20:{
        jj_consume_token(20);
        s = jj_consume_token(NAME);
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        ;
      }
{if ("" != null) return new MatchFilterTokenProperty(l, s == null ? null : s.toString());}
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public TextPattern complexQuery() throws ParseException {TextPattern a = null, b = null;
    Token op = null;
    Operation oper = Operation.CONTAINING;
    a = simpleQuery();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case WITHIN:
    case CONTAINING:{
      op = queryOperator();
      b = complexQuery();
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      ;
    }
if (op == null)
            {if ("" != null) return a;}
        if (op.toString().equals("within")) {
            // a within b
            oper = Operation.WITHIN;
        }

        {if ("" != null) return new TextPatternPositionFilter(a, b, oper);}
    throw new Error("Missing return statement in function");
  }

  final public Token queryOperator() throws ParseException {Token t = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case WITHIN:{
      t = jj_consume_token(WITHIN);
      break;
      }
    case CONTAINING:{
      t = jj_consume_token(CONTAINING);
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return t;}
    throw new Error("Missing return statement in function");
  }

/* a simple query (not including containing, within, etc.) */
  final public TextPattern simpleQuery() throws ParseException {TextPattern query = null, rest = null;
    Token b = null;
    query = sequence();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 30:
    case 31:
    case 32:{
      b = booleanOperator();
      rest = simpleQuery();
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      ;
    }
if (b == null)
   {if ("" != null) return query;}
        if (b.toString().equals("->"))
            {if (true) throw new UnsupportedOperationException("Implication operator only supported within global constraints");}
  if (b.toString().equals("&"))
   {if ("" != null) return new TextPatternAnd(query, rest);}
  {if ("" != null) return new TextPatternOr(query, rest);}
    throw new Error("Missing return statement in function");
  }

/* a sequence of token constraints */
  final public TextPattern sequence() throws ParseException {TextPattern first = null;
 TextPattern result = null;
 TextPattern[] tag = null;
    Token t2 = null;
    first = sequencePart();
    if (jj_2_1(2)) {
      result = sequenceRest(first);
    } else {
      ;
    }
if (result == null)
   result = first;

  {if ("" != null) return result;}
    throw new Error("Missing return statement in function");
  }

/* a start or self-closing tag tag such as <s> or <s/> (for finding XML elements).
 * Note that it returns one TextPattern, but if it's in [0] that means it's a start
 * tag; if it's in [1] it's a self-closing tag.
 */
  final public TextPattern tag() throws ParseException {Token tagName, endTagSlash = null, selfCloseSlash = null;
    Map<String, String> attr = new HashMap<String, String>();
    jj_consume_token(21);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 22:{
      endTagSlash = jj_consume_token(22);
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    tagName = jj_consume_token(NAME);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NAME:{
        ;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        break label_1;
      }
      attributes(attr);
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 22:{
      selfCloseSlash = jj_consume_token(22);
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    jj_consume_token(23);
if (endTagSlash != null && selfCloseSlash != null) {
            {if (true) throw new MalformedTagException();}
        }
        TextPattern tags = new TextPatternTags(tagName.toString(), attr);
        if (selfCloseSlash != null)
            {if ("" != null) return tags;}
        if (endTagSlash != null) {
            if (attr.size() > 0) {
                {if (true) throw new MalformedTagException("Cannot filter XML end tag on attributes");}
            }
            {if ("" != null) return new TextPatternEdge(tags, true);} // right edge
        }
        {if ("" != null) return new TextPatternEdge(tags, false);} // left edge

    throw new Error("Missing return statement in function");
  }

  final public String quotedString() throws ParseException {Token a;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case QUOTED_STRING:{
      a = jj_consume_token(QUOTED_STRING);
      break;
      }
    case SINGLE_QUOTED_STRING:{
      a = jj_consume_token(SINGLE_QUOTED_STRING);
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return getStringBetweenQuotes(a.toString());}
    throw new Error("Missing return statement in function");
  }

  final public void attributes(Map<String, String> attr) throws ParseException {Token name;
    String value;
    name = jj_consume_token(NAME);
    jj_consume_token(15);
    value = quotedString();
attr.put(name.toString(), value);
  }

/* continuation of a sequence (after the first part) */
  final public TextPattern sequenceRest(TextPattern first) throws ParseException {Token op = null;
 TextPattern rest = null;
    rest = sequence();
if (rest == null)
   {if ("" != null) return first;}
  {if ("" != null) return new TextPatternSequence(first, rest);}
    throw new Error("Missing return statement in function");
  }

/* a repetition specifier */
  final public Integer[] repetitionAmount() throws ParseException {Token t = null, t2 = null;
 Integer[] minMax = new Integer[2];
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 24:{
      jj_consume_token(24);
minMax[0] = 0; minMax[1] = BLSpanQuery.MAX_UNLIMITED; {if ("" != null) return minMax;}
      break;
      }
    case 25:{
      jj_consume_token(25);
minMax[0] = 1; minMax[1] = BLSpanQuery.MAX_UNLIMITED; {if ("" != null) return minMax;}
      break;
      }
    case 26:{
      jj_consume_token(26);
minMax[0] = 0; minMax[1] = 1; {if ("" != null) return minMax;}
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      if (jj_2_2(3)) {
        jj_consume_token(27);
        t = jj_consume_token(NUMBER);
        jj_consume_token(28);
minMax[0] = minMax[1] = num(t); {if ("" != null) return minMax;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 27:{
          jj_consume_token(27);
          t = jj_consume_token(NUMBER);
          jj_consume_token(29);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case NUMBER:{
            t2 = jj_consume_token(NUMBER);
            break;
            }
          default:
            jj_la1[13] = jj_gen;
            ;
          }
          jj_consume_token(28);
minMax[0] = num(t);
  if (t2 == null)
   minMax[1] = BLSpanQuery.MAX_UNLIMITED;
  else
   minMax[1] = num(t2);
  {if ("" != null) return minMax;}
          break;
          }
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

/* boolean operator: and, or or implication */
  final public Token booleanOperator() throws ParseException {Token t = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 30:{
      t = jj_consume_token(30);
      break;
      }
    case 31:{
      t = jj_consume_token(31);
      break;
      }
    case 32:{
      t = jj_consume_token(32);
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return t;}
    throw new Error("Missing return statement in function");
  }

/* sequence part: one part in a sequence, possibly with a repetition operator */
  final public TextPattern sequencePart() throws ParseException {TextPattern m = null;
 Integer[] rep = null;
 String label = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NAME:
    case NUMBER:{
      label = captureLabel();
      jj_consume_token(33);
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 21:{
      m = tag();
      break;
      }
    case QUOTED_STRING:
    case SINGLE_QUOTED_STRING:
    case 34:{
      m = position();
      break;
      }
    case 17:{
      jj_consume_token(17);
      m = complexQuery();
      jj_consume_token(18);
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (jj_2_3(6)) {
      rep = repetitionAmount();
    } else {
      ;
    }
if (rep != null)
  {
            if (m instanceof TextPatternAnyToken)
            {
                TextPatternAnyToken any = (TextPatternAnyToken)m;
                m = any.repeat(rep[0], rep[1]);
            } else
                m = new TextPatternRepetition(m, rep[0], rep[1]);
  }
  if (label != null) {
      m = new TextPatternCaptureGroup(m, label);
  }
  {if ("" != null) return m;}
    throw new Error("Missing return statement in function");
  }

  final public String captureLabel() throws ParseException {Token l = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NAME:{
      l = jj_consume_token(NAME);
      break;
      }
    case NUMBER:{
      l = jj_consume_token(NUMBER);
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return l.toString();}
    throw new Error("Missing return statement in function");
  }
